cabal-version:      2.4
name:               sudoku-solver
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            MIT
author:             Oliver Hamlet
maintainer:         oliver@ortham.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md

executable sudoku-solver
    main-is:          main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
